<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Activities.SelectRegistrationActivity">

    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="150dp" />

    <TextView
        android:id="@+id/title"
        android:text="@string/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="#000"/>

    <TextView
        android:id="@+id/title2"
        android:text="@string/select_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="#000"/>

    <Button
        android:id="@+id/patientReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/patient_registration"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:background="@drawable/button_background"/>

    <Button
        android:id="@+id/doctorReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/doctor_registration"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:background="@drawable/button_background"/>

    <TextView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_login"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#000"
        android:gravity="center"
        android:textSize="17sp"/>


</LinearLayout>