<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Activities.DoctorRegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:text="@string/doctor_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/profile"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutStyle"
                app:boxStrokeColor="#000"
                app:hintTextAppearance="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regFullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:drawableStart="@drawable/ic_profile"
                    android:hint="@string/enter_your_full_name"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="15dp"
                    android:textColor="#000"
                    android:textColorHint="#000"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutStyle"
                app:boxStrokeColor="#000"
                app:hintTextAppearance="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regpnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:drawableStart="@drawable/ic_number"
                    android:hint="@string/enter_your_phone_number"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:padding="15dp"
                    android:textColor="#000"
                    android:textColorHint="#000"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutStyle"
                app:boxStrokeColor="#000"
                app:hintTextAppearance="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:drawableStart="@drawable/ic_location"
                    android:hint="@string/enter_your_location"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="15dp"
                    android:textColor="#000"
                    android:textColorHint="#000"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/timeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="9dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:entries="@array/Timeframes"
                android:gravity="center"
                android:minHeight="48dp"
                android:popupBackground="#fff" />

            <Spinner
                android:id="@+id/depSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="9dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:entries="@array/Departments"
                android:gravity="center"
                android:minHeight="48dp"
                android:popupBackground="#fff" />

            <Spinner
                android:id="@+id/specialSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="9dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:entries="@array/Specialization"
                android:gravity="center"
                android:minHeight="48dp"
                android:popupBackground="#fff" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutStyle"
                app:boxStrokeColor="#000"
                app:hintTextAppearance="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/enter_your_e_mail"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:padding="15dp"
                    android:textColor="#000"
                    android:textColorHint="#000"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutStyle"
                app:boxStrokeColor="#000"
                app:hintTextAppearance="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:padding="15dp"
                    android:textColor="#000"
                    android:textColorHint="#000"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/regButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/button_background"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/regPageQtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:text="@string/already_have_an_account_login"
                android:textAllCaps="false"
                android:textColor="#000"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>